# ezconf

./: .gitignore  LICENSE  pyproject.toml  setup.py
easyconfig/: config.py
