[tool.poetry]
name = "easyconf"
version = "0.1.0"
description = "An easy-to-use configuration package using YAML"
authors = ["Lars Eppinger"]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
